# biovoice-agents

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Full file layout.md  Project structure  README.md  TODOS.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
app/: gradio_ui.py  orchestrator.py
biovoice/: _skill_shim.py  skill.py
biovoice/agents/: airr_agent.py  alphafold_agent.py  base.py  biorxiv_agent.py  chembl_agent.py  clinicaltrials_agent.py  crossref_agent.py  europe_pmc_agent.py  flunet_agent.py  iedb_agent.py  local_data_agent.py  maad_agent.py  opentargets_agent.py  pdb_agent.py  pubchem_agent.py  pubmed_agent.py  registry.py  semantic_scholar_agent.py  uniprot_agent.py
biovoice/bots/: gateway.py
biovoice/cli/: main.py
biovoice/config/: settings.py
biovoice/core/: grant_config.py  orchestrator.py  task.py
biovoice/finetuning/: __init__.py  feedback_store.py
biovoice/models/: base.py  ollama_client.py  openai_client.py
biovoice/qa/: __init__.py  engine.py
biovoice/ui/: app.py
core/knowledge_graph/: __init__.py  graph_store.py
core/narrative/: generator.py
core/presentation/: ppt_generator.py  speech_synthesizer.py  visualizer.py
core/rag/: vector_store.py
core/retrieval/: base.py  biorxiv.py  enhanced_fetcher.py  europe_pmc.py  pdf_processor.py  pmc_fulltext.py  pubmed.py
core/utils/: query_builder.py
domain/virology/prompts/: pmrc_templates.py
domain/virology/schemas/: antibody_schema.py
scripts/: build_vector_db.py  crawl.py  fetch_all_flu_bnabs.py  finetune_lora.py  rag_qa.py  search_demo.py  show_corpus.py
tests/: test_agents.py  test_airr_agent.py  test_citation_verifier.py  test_eval.py  test_feedback_store.py  test_knowledge_graph.py  test_orchestrator.py  test_qa_engine.py
